--- a/pom.xml
+++ b/pom.xml
@@ -74,14 +74,14 @@
 		</plugins>
 	</build>
 	<dependencies>
-	
+
 		<!-- was getting netty issues in container with RestTemplate/JMS so introduced this client and CustomHttpComponentsClientHttpRequestFactory -->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.5.13</version>
 		</dependency>
-		
+
 		<!-- was getting netty class not found issues with JMS in container -->
 		<dependency>
 			<groupId>io.netty</groupId>
@@ -126,15 +126,21 @@
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 		</dependency>
 		<!--SpringFox dependencies -->
+		<!--https://stackoverflow.com/questions/48311447/springboot-swagger-url-shows-whitelabel-error-page-->
+		<!--		<dependency>-->
+		<!--			<groupId>io.springfox</groupId>-->
+		<!--			<artifactId>springfox-swagger2</artifactId>-->
+		<!--			<version>${springfox-version}</version>-->
+		<!--		</dependency>-->
+		<!--		<dependency>-->
+		<!--			<groupId>io.springfox</groupId>-->
+		<!--			<artifactId>springfox-swagger-ui</artifactId>-->
+		<!--			<version>${springfox-version}</version>-->
+		<!--		</dependency>-->
 		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
-			<version>${springfox-version}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
-			<version>${springfox-version}</version>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-boot-starter</artifactId>
+				<version>3.0.0</version>
 		</dependency>
 
 		<dependency>
