--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>com.microsoft.azure</groupId>
 			<artifactId>applicationinsights-logging-logback</artifactId>
 			<version>2.6.1</version>
