--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
     <junit.version>4.13.2</junit.version>
     <jaxb.version>2.4.0-b180830.0359</jaxb.version>
     <azure.cosmos.version>4.41.0</azure.cosmos.version>
+    <azure.servicebus.version>7.13.3</azure.servicebus.version>
+    <lombock.version>1.18.24</lombock.version>
   </properties>
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -78,6 +80,22 @@
             </configuration>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
+          <annotationProcessorPaths>
+            <path>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+            </path>
+          </annotationProcessorPaths>
+        </configuration>
       </plugin>
     </plugins>
   </build>
@@ -169,6 +187,16 @@
       <groupId>com.azure</groupId>
       <artifactId>azure-cosmos</artifactId>
       <version>${azure.cosmos.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.azure</groupId>
+      <artifactId>azure-messaging-servicebus</artifactId>
+      <version>${azure.servicebus.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>${lombok.version}</version>
     </dependency>
   </dependencies>
 </project>
